--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,13 @@
-.hello{
-    color: red;
-    background: url('./dice.png');
+@font-face {
+  font-family: "stardosStencil";
+  src: url('./StardosStencil-Regular.ttf') format('ttf'),
+  url('./StardosStencil-Bold.ttf') format('ttf');
+  font-weight: 600;
+  font-style: normal;
+}
+
+.hello {
+  color: red;
+  background: url("./dice.png");
+  font-family: "stardosStencil";
 }
